# research_agent

./: .env.example  .gitignore  LICENSE  README.md  database.ipynb  docs_to_vectordb.ipynb  playground_notebook.ipynb  pyproject.toml  research_agent.ipynb  research_agent_v2.ipynb
agent_v3/: actions.py  agent.py  agent_run_model.py  experiments.ipynb  research_agent_v3.ipynb
agent_v3/helpers/: questions_helper.py  response_helpers.py  retriever.py
agent_v3/prompts/: create_questions.py  hypothetical_answer.py  most_pertinent_question.py  question_atomizer.py  refine_answer.py  retrieval_qa.py
chains/: create_questions.py  most_pertinent_question.py  question_atomizer.py  research_compiler.py  retrieval_qa.py
chains_v2/: create_questions.py  most_pertinent_question.py  question_atomizer.py  refine_answer.py  research_compiler.py  result_analyser.py  retrieval_qa.py
helpers/: response_helpers.py
vector_stores/: document_store.py
