[tool.poetry]
name = "research-agent-python"
version = "0.1.0"
description = ""
authors = ["Nayak <rahul.nyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "0.21.0"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
annotated-types = "0.5.0"
anyio = "3.7.1"
appnope = "0.1.3"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
asttokens = "2.2.1"
async-lru = "2.0.4"
async-timeout = "4.0.2"
attrs = "23.1.0"
babel = "2.12.1"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
cachetools = "5.3.1"
certifi = "2023.7.22"
cffi = "1.15.1"
chardet = "4.0.0"
charset-normalizer = "3.2.0"
click = "8.1.6"
cloudpickle = "2.2.1"
comm = "0.1.4"
dask = "2023.8.0"
dataclasses = "0.6"
debugpy = "1.6.7"
decorator = "5.1.1"
defusedxml = "0.7.1"
deprecation = "2.1.0"
einops = "0.6.1"
executing = "1.2.0"
fastjsonschema = "2.18.0"
filelock = "3.12.2"
fqdn = "1.5.1"
frozenlist = "1.4.0"
fsspec = "2023.6.0"
google-api-core = "2.11.1"
google-api-python-client = "2.96.0"
google-auth = "2.22.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
googleapis-common-protos = "1.60.0"
gotrue = "1.0.3"
gspread = "5.10.0"
gspread-pandas = "3.2.2"
h11 = "0.14.0"
httpcore = "0.17.3"
httplib2 = "0.22.0"
httpx = "0.24.1"
huggingface-hub = "0.16.4"
idna = "3.4"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.0"
iniconfig = "2.0.0"
ipykernel = "6.25.0"
ipython = "8.14.0"
isoduration = "20.11.0"
jedi = "0.19.0"
jinja2 = "3.1.2"
json5 = "0.9.14"
jsonpointer = "2.4"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
jupyter-events = "0.7.0"
jupyter-lsp = "2.2.0"
jupyter-client = "8.3.0"
jupyter-core = "5.3.1"
jupyter-server = "2.7.0"
jupyter-server-terminals = "0.4.4"
jupyterlab = "4.0.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-server = "2.24.0"
langchain = "0.0.294"
langsmith = "0.0.38"
locket = "1.0.0"
markupsafe = "2.1.3"
marshmallow = "3.20.1"
matplotlib-inline = "0.1.6"
mistune = "3.0.1"
mpmath = "1.3.0"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
nbclient = "0.8.0"
nbconvert = "7.7.3"
nbformat = "5.9.2"
nest-asyncio = "1.5.7"
networkx = "3.1"
notebook-shim = "0.2.3"
numexpr = "2.8.5"
numpy = "1.25.2"
oauthlib = "3.2.2"
openai = "0.27.8"
openapi-schema-pydantic = "1.2.4"
overrides = "7.4.0"
packaging = "23.1"
pandas = "2.0.3"
pandocfilters = "1.5.0"
parso = "0.8.3"
partd = "1.4.0"
pathlib = "1.0.1"
pexpect = "4.8.0"
pgvector = "0.2.1"
pickleshare = "0.7.5"
platformdirs = "3.10.0"
pluggy = "1.2.0"
postgrest = "0.10.8"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
protobuf = "4.24.0"
psutil = "5.9.5"
psycopg2 = "2.9.7"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "2.2.1"
pydantic-core = "2.6.1"
pygments = "2.16.1"
pyparsing = "3.1.1"
pypdf = "3.16.1"
pytest = "6.2.5"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-json-logger = "2.0.7"
pytz = "2023.3"
pyyaml = "6.0.1"
pyzmq = "25.1.0"
realtime = "1.0.0"
referencing = "0.30.2"
regex = "2023.6.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rfc3339-validator = "0.1.4"
rfc3986 = "1.5.0"
rfc3986-validator = "0.1.1"
rpds-py = "0.9.2"
rsa = "4.9"
safetensors = "0.3.1"
send2trash = "1.8.2"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.4.1"
sqlalchemy = "2.0.19"
stack-data = "0.6.2"
storage3 = "0.5.4"
strenum = "0.4.15"
supabase = "1.0.4"
supafunc = "0.2.3"
swifter = "1.4.0"
sympy = "1.12"
tabulate = "0.9.0"
tenacity = "8.2.2"
terminado = "0.17.1"
tiktoken = "0.4.0"
tinycss2 = "1.2.1"
tokenizers = "0.13.3"
toml = "0.10.2"
toolz = "0.12.0"
torch = "2.0.1"
tornado = "6.3.2"
tqdm = "4.65.0"
traitlets = "5.9.0"
transformers = "4.31.0"
typing-inspect = "0.9.0"
typing-extensions = "4.7.1"
tzdata = "2023.3"
uri-template = "1.3.0"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
wcwidth = "0.2.6"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.6.1"
websockets = "10.4"
wikipedia = "1.4.0"
yachalk = "0.1.5"
yarl = "1.9.2"
zipp = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
