[tool.poetry]
name = "research-agent-python"
version = "0.1.0"
description = ""
authors = ["Nayak <rahul.nyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
langchain = "^0.0.344"
python-dotenv = "^1.0.0"
openai = "^1.3.7"
jupyterlab = "^4.0.9"
psycopg2 = "^2.9.9"
pgvector = "^0.2.4"
tiktoken = "^0.5.1"
pypdf = "^3.17.1"
yachalk = "^0.1.5"
uuid = "^1.30"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
